Fix build with Qt 5.5/dev branch in release mode

since qtbase commit ebef2ad1360c80ad62de5f4a1c4e7e4051725c1c
"Make the empty Q_ASSERT still check its argument for validity" the
build shall fail.

REVIEW: 121562
FIXED-IN: 5.7.0
BUG: 342872